# cpp-plantilla

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists_8txt.html  Makefile  README.md  compila.sh  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  ejecuta.sh  files.html  globals.html  globals_func.html  graph_legend.html  index.html  my__lib_2CMakeLists_8txt.html  my__lib_8cc.html  my__lib_8cc__incl.dot  my__lib_8cc__incl.map  my__lib_8cc__incl.md5  my__lib_8h.html  my__lib_8h__dep__incl.dot  my__lib_8h__dep__incl.map  my__lib_8h__dep__incl.md5  my__lib_8h_source.html
.github-PREVIO/workflows/: documentation.yml
.github/workflows/: documentation.yml  macos.yml  pre-commit.yml  ubuntu.yml
.github/workflows-bajo-estudio/: macos.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.cc
cmake/: ClangTidy.cmake  Docs.cmake  FormatCLang.cmake  FormatCMake.cmake
configured/: config.hpp.in
docs/: Doxyfile
src/: CMakeLists.txt
src/my_lib/: CMakeLists.txt  my_lib.cc
tests/: CMakeLists.txt
